@@ -2668,6 +2668,29 @@ tools::assertWarning(formula("{ ~ x }"),   "deprecatedWarning", verbose=TRUE)
 stopifnot(identical(str2expression(character()), expression()))
 
 
+## quasi(*, variance = list()) - should not deparse(); PR#17560
+## like quasipoisson() :
+devRes <- function(y, mu, wt) { 2 * wt * (y * log(ifelse(y == 0, 1, y/mu)) - (y-mu)) }
+init <- expression({
+    if(any(y < 0)) stop("y < 0")
+    n <- rep.int(1, nobs)
+    mustart <- y + 0.1
+})
+myquasi <- quasi(link = "log",
+                 variance = list(name = "my quasi Poisson",
+                     varfun  = function(mu) mu,
+                     validmu = function(mu) all(is.finite(mu)) && all(mu > 0),
+                     dev.resids = devRes,
+                     initialize = init))
+x  <- runif(100, min=0, max=1)
+y  <- rpois(100, lambda=1)
+fq1 <- glm(y ~ x, family = myquasi)
+fqP <- glm(y ~ x, family = quasipoisson)
+str(keep <- setdiff(names(fq1), c("family", "call")))
+stopifnot(all.equal(fq1[keep], fqP[keep]))
+## quasi() failed badly "switch(vtemp, ... EXPR must be a length 1 vector" in R <= 3.6.0
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
